# MenuCounterPy

./: .counter.db  .counter.duckdb.wal  .gitignore  MenuBarCounter.spec  MenuCounter.spec  README.md  counter.db  counter.py  main.py  main.spec  pyproject.toml  setup.py  test.py
