[project]
name = "menucounterpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyobjc-core>=10.1",
    "pyobjc-framework-cocoa>=10.1",
    "pyobjc>=10.1",
    "setuptools>=75.6.0",
    "pyinstaller>=6.11.1",
    "requests>=2.31.0",
    "google-api-python-client>=2.154.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
]
